# Memory-aegis

./: .gitignore  AEGIS_V9_FULL_GUIDE.md  CLAUDE.md  LICENSE  QUICKSTART.md  README.md  aegis_ux_stress_test_extreme.py  index.ts  install.sh  openclaw.plugin.json  package-lock.json  package.json  pyproject.toml  requirements.txt  test_fts_manual.py  test_v8_ux.py  test_v8_ux_debug.py  test_v8_ux_final.py
.codex/: config.toml  gsd-file-manifest.json
.planning/: AEGIS-ADOPTION-ROADMAP.md  PRODUCTION-EXCELLENCE-ROADMAP.md  PROJECT.md  REQUIREMENTS.md  ROADMAP.md  STATE.md
.specify/: init-options.json
aegis_py/: ARCHITECTURE_BEAST_MAP.md  __init__.py  app.py  cli.py  consumer_shell_surface.py  core_showcase_surface.py  dashboard_shell_surface.py  facade.py  graph_analysis.py  health_surface.py  install_check.py  main.py  operator_surface.py  spotlight_surface.py  surface.py  tool_registry.py
benchmark/: COMPARISON.md  README.md  run-all.ts
docs/: AEGIS_V9_SPEC.md  RELEASE-GATE.md  ROLLBACK-CHECKLIST.md  SOAK-TEST-CHECKLIST.md  V8_GAP_ROADMAP.md  V8_SPEC_MAPPING.md  WHY_AEGIS_CORE_WINS.md  implementation_plan.md.resolved
scripts/: apocalypse_v7.py  benchmark_chameleon.ts  benchmark_dragonfly.ts  benchmark_weaver.ts  extreme_v8_recall_stress_2026.py  long_horizon_memory_survival.py  run_doctor.ts  stress_v7.py  super_stress_v10.py  v10_gauntlet_test.py  v8_apocalypse_stress.py  verify_ux.py
src/: aegis-manager.ts  index.ts  plugin.ts  python-adapter.ts
stress-results/: level-1_20260325_072859.json  level-1_20260331_054953.json  level-1_20260331_055549.json  (+31 more)
(+628 files in other folders)
